--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,7 @@ figure {
     border: 0px solid green;
     
     padding: 10px 10px 10px 10px; /* top, right, bottom, left */
+    text-transform: uppercase;
 }
 
 #main-nav-list a {
@@ -56,6 +57,8 @@ figure {
 #main-nav-list a:hover {
     text-decoration: underline solid red;
     text-underline-offset: 10px;
+    background: rgb(40, 40, 40);
+
 }
 
 #announcement-section {
@@ -82,6 +85,7 @@ figure {
     border: 0px solid red;
     align-self: center;
     font-size: 15px;
+    text-transform: uppercase;
 }
 
 #disney-plus-logo-img {
