--- a/css/style.css
+++ b/css/style.css
@@ -146,5 +146,51 @@ a {
     background: rgba(31, 30, 30, 0.75);
 }
 
+#timeline-order, #phase-one, #phase-two, #phase-three, #phase-four {
+    border: 0px solid red;
 
+    display: grid;
+    grid-template-columns: auto auto auto auto 45px;
+    grid-template-rows: auto auto;
+    padding-left: 1vw;
+    padding-right: 1vw;
+}
 
+.marvel-heading {
+    border: 0px solid pink;
+    grid-column-start: 1;
+    grid-column-end: 6;
+    /*text-transform: uppercase;*/
+    margin-top: 30px;
+    margin-bottom: 10px;
+}
+
+#timeline-order figure, #phase-one figure, #phase-two figure, #phase-three figure, #phase-four figure {
+    border: 0px solid blue;   
+}
+
+#timeline-order figure img, #phase-one figure img, #phase-two figure img, #phase-three figure img, #phase-four figure img{
+    border: 0px solid green;
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+    object-position: 0px 0px;
+    vertical-align: top;
+}
+
+.marvel-link:hover {
+    opacity: 0.5;
+}
+
+.marvel-heading-btn {
+    border: 0px solid red;
+    background-color: rgb(49, 48, 48);
+    color: whitesmoke;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.marvel-heading-btn:hover {
+    background-color: rgba(92, 90, 90, 0.7);
+}
