--- a/css/style.css
+++ b/css/style.css
@@ -194,3 +194,37 @@ a {
 .marvel-heading-btn:hover {
     background-color: rgba(92, 90, 90, 0.7);
 }
+
+#sub-nav {
+    border: 0px solid blue;
+    
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    grid-template-rows: auto;
+    justify-content: center;
+    align-items: center;
+    column-gap: 50px;
+}
+
+.sub-nav-list {
+    list-style: none;
+}
+
+.sub-nav-list li:not(:last-child) {
+    margin-bottom: 20px;
+}
+
+.sub-nav-list li a {
+    color: whitesmoke;
+    text-transform: uppercase;
+}
+
+.sub-nav-list li a:hover {
+    opacity: 0.7;
+}
+
+.sub-nav-m {
+    width: 100px;
+    height: auto;
+    object-fit: contain;
+}
