--- a/css/style.css
+++ b/css/style.css
@@ -228,3 +228,14 @@ a {
     height: auto;
     object-fit: contain;
 }
+
+#social-media a img{
+    border: 1px solid black;
+    border-radius: 17%;
+    background-color: whitesmoke;
+    margin: 10px;
+}
+
+#social-media a img:hover{
+    opacity: 0.55;
+}
